--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
+    "mime-types": "^2.1.35",
     "nest-winston": "^1.9.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
