--- a/package.json
+++ b/package.json
@@ -88,5 +88,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "node dist/shared/seeding/seed.js"
   }
 }
