--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,61 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+  build:
+    machine:
+      enabled: true
     steps:
-      # Checkout the code as the first step.
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Build Docker Image"
+          command: "docker build -t pro1 ."
+      - run:
+          name: "Save Docker Image"
+          command: "docker save pro1 > pro1.tar"
+      - run:
+          name: "Run Docker Container"
+          command: "docker run pro1"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - pro1.tar
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
+  deploy-image:
+    machine:
+      enabled: true
+    steps:
+      - attach_workspace:
+          at: /workspace
+      - run:
+          name: "Load Docker Image"
+          command: "docker load < /workspace/pro1.tar"
+      - run:
+          name: "Install AWS CLI"
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y awscli
+      - run:
+          name: "Login to AWS ECR"
+          command: |
+            aws ecr get-login-password --region us-east-2 | \
+            docker login --username AWS --password-stdin 058264403259.dkr.ecr.us-east-2.amazonaws.com
+      - run:
+          name: "Tag Docker Image"
+          command: |
+            docker tag pro1:latest 058264403259.dkr.ecr.us-east-2.amazonaws.com/pro1:latest
+      - run:
+          name: "Push Docker Image"
+          command: |
+            docker push 058264403259.dkr.ecr.us-east-2.amazonaws.com/pro1:latest
+
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build-and-deploy:
     jobs:
-      - say-hello
+      - build
+      - deploy-image:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
