chore: Added deploy-service job on build-and-deploy workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,3 +95,10 @@ workflows:
             branches:
               only:
                 - main
+      - deploy-service:
+          requires:
+            - deploy-image
+          filters:
+            branches:
+              only:
+                - main
