--- a/package.json
+++ b/package.json
@@ -91,5 +91,6 @@
   },
   "prisma": {
     "seed": "node dist/shared/seeding/seed.js"
-  }
+  },
+  "packageManager": "pnpm@8.15.3+sha1.64838798f519c18029c1e8a1310e16101fc2eda0"
 }
