--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:deploy": "pnpm prisma migrate deploy && prisma db seed"
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.686.0",
@@ -91,6 +92,5 @@
   },
   "prisma": {
     "seed": "node dist/shared/seeding/seed.js"
-  },
-  "packageManager": "pnpm@8.15.3+sha1.64838798f519c18029c1e8a1310e16101fc2eda0"
+  }
 }
